<resources>
    <string name="app_name" translatable="false">Barman IoT</string>
    <string name="menu_remove_all">Remove all</string>
    <string name="activity_name_settings">Settings</string>
    <string name="activity_name_motors">Motors</string>
    <string name="activity_name_gpios">Gpio</string>
    <!--<string name="activity_name_drinks">Drinks</string>-->
    <string name="activity_name_drink_groups">Drink Groups</string>
    <string name="activity_name_drink_components">Components</string>
    <string name="activity_name_motor_details">Motor details</string>
    <!--<string name="title_activity_settings_bottles">SettingsBottlesActivity</string>-->
    <string name="menu_clear">Clear</string>
    <string name="title_activity_add_cocktail">Add Cocktail</string>
    <string name="title_activity_edit_cocktail">Edit Cocktail</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="motor_name">Motor name</string>
    <string name="gpio">GPIO</string>
    <string name="name">Name</string>
    <string name="speed">Speed</string>
    <string name="test">Test</string>
    <string name="component">Component</string>
    <string name="pour">Pour</string>
    <string name="delete">Delete</string>
    <string name="pin_value">PIN %d</string>
    <string name="cocktail_name">Cocktail name</string>
    <string name="new_cocktail_name">New Cocktail Name</string>
    <string name="add_cocktail">Add Cocktail</string>
    <string name="volume">Volume</string>
    <string name="edit">Edit</string>
    <string name="pin">Pin</string>
    <string name="motor">Motor</string>
    <string name="title_activity_add_position">Add Position</string>
    <string name="title_activity_cocktail">Cocktail</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_position">Positions</string>
    <string name="tag">Tag</string>
    <string name="positions">Positions</string>
    <string name="cocktails">Cocktails</string>
    <string name="motors">Motors</string>
    <string name="this_item_was_deleted">This item was deleted</string>
    <string name="unknown">Unknown</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="do_you_want_to_delete_this_item">Do you want to delete this item ?</string>
    <string name="do_you_want_to_delete_all_items">Do you want to delete all items ?</string>
    <string name="image_nxp_board">nxp board</string>
    <string name="minus">Minus</string>
    <string name="plus">Plus</string>
    <string name="update_tag">Update tag</string>
    <string name="update_tag_name">Update tag name</string>
    <string name="no_motor">No motor</string>
    <string name="no_component">No component</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="minusTen">-10</string>
    <string name="minusOne">-1</string>
    <string name="plusOne">+1</string>
    <string name="plusTen">+10</string>
    <string name="preload">Preload</string>
    <string name="starttest">startTest</string>
    <string name="masstest">massTest</string>
</resources>
