<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/dialog_add_component">

    <Button
        android:id="@+id/btnMinusTen"
        style="@style/square_small_button"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/minusTen" />

    <Button
        android:id="@+id/btnMinus"
        style="@style/square_small_button"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/btnMinusTen"
        android:text="@string/minusOne" />

    <Button
        android:id="@+id/btnPlus"
        style="@style/square_small_button"
        android:layout_alignTop="@+id/btnMinus"
        android:layout_toStartOf="@+id/btnPlusTen"
        android:text="@string/plusOne" />

    <Button
        android:id="@+id/btnPlusTen"
        style="@style/square_small_button"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btnMinus"
        android:text="@string/plusTen" />

    <TextView
        android:id="@+id/etValue"
        style="@style/square_small_button"
        android:layout_alignBottom="@+id/btnMinus"
        android:layout_toEndOf="@+id/btnMinus"
        android:layout_toStartOf="@+id/btnPlus"
        android:ems="10"
        android:gravity="center"
        android:text="50" />
</RelativeLayout>