<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@string/component" />

        <Spinner
            android:id="@+id/componentSpinner"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp" />
    </LinearLayout>

    <TextView
        style="@style/TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/volume" />

    <include layout="@layout/view_enter_value" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSave"
            style="?attr/buttonBarButtonStyle"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnCancel"
            style="?attr/buttonBarButtonStyle"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>


</LinearLayout>