<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="400dp"
        tools:context="com.saienko.androidthings.barman.ui.settings.AddMotorActivity">

        <LinearLayout
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    style="@style/TextView"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/motor_name" />

                <TextView
                    android:id="@+id/tvName"
                    style="@style/EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="24dp"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/TextView"
                    android:layout_gravity="center_vertical"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gpio"
                    app:layout_constraintBottom_toBottomOf="@+id/spinnerGpio"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/spinnerGpio" />

                <Spinner
                    android:id="@+id/spinnerGpio"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="8dp"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView3"
                    style="@style/TextView"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_width="120dp"
                    android:gravity="center_vertical"
                    android:text="@string/speed" />

                <!--`<ImageButton-->
                <!--android:id="@+id/minus"-->
                <!--style="@style/square_small_button"-->
                <!--android:contentDescription="@string/minus"-->
                <!--android:src="@drawable/ic_minus" />-->

                <!--<TextView-->
                <!--android:id="@+id/etSpeed"-->
                <!--style="@style/EditText"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:layout_width="60dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:ems="10"-->
                <!--android:enabled="false"-->
                <!--android:text="100" />-->

                <!--<ImageButton-->
                <!--android:id="@+id/plus"-->
                <!--style="@style/square_small_button"-->
                <!--android:contentDescription="@string/plus"-->
                <!--android:src="@drawable/ic_plus" />-->
                <include layout="@layout/view_enter_value" />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="8dp"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextView"
                    android:layout_gravity="center_vertical"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/component" />

                <TextView
                    android:id="@+id/tvComponent"
                    style="@style/EditText"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/component" />
            </LinearLayout>
        </LinearLayout>


        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnTest"
            style="@style/square_button"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/test"
            app:layout_constraintBottom_toTopOf="@+id/btnSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageButton
            android:id="@+id/imgInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/test"
            app:layout_constraintBottom_toTopOf="@+id/btnSave"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_info" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>